--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en"
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="Simple Template #1 from simpletemplates.org" />
 <meta name="keywords" content="simple #1, template, simpletemplates.org" />
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>Simple Template #1 - simpletemplates.org</title>
+<title>Midterm Project</title>
 </head>
 <body>
 <div id="wrap">
 
 <div id="header">
-<h1>Simple Template #1</h1>
-<h2>Free Simple Website HTML/CSS Template</h2>
+<h1>Finn Leach</h1>
+<h2>Midterm Project</h2>
 </div>
 
 <div id="topmenu">
@@ -22,17 +22,18 @@
 </div>
 <ul>
 <li><a href="#">Home</a></li>
-<li><a href="#">About Us</a></li>
-<li><a href="#">What We Do</a></li>
-<li><a href="#">The Team</a></li>
-<li><a href="#">Contact Us</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Coursework</a></li>
+<li><a href="#">Artifacts</a></li>
+<li><a href="#">Module Assignments</a></li>
+<li><a href="#">Contact Me</a></li>
 </ul>
 </div>
 
 <div id="content">
-<h2>Simple Template #1 from simpletemplates.org</h2>
+<h2>Hello Welcome to my Web Development Midtem project</h2>
 <p>
-This is a fast loading and search engine friendly template. No images are used for a design - pure html/css template. Code is easy to read for quick and easy editing to suit your needs for a simple website that your visitors will find friendly to use. 
+This website has information about me, my classwork modules and artifacts. If you want you can check out my page to see what I am up to!
 </p>
 
 <img src="pic3.jpg" alt="Pic 3" />
@@ -51,7 +52,7 @@ This is a fast loading and search engine friendly template. No images are used f
 
 <div id="menu">
 
-<h3>Example Articles Menu</h3>
+<h3>UNDER CONSTRUCTION: Example Articles Menu</h3>
 <ul>
 <li><a href="#">Title of the first article in the sidebar</a></li>
 <li><a href="#">Another article title goes here</a></li>
@@ -78,7 +79,7 @@ This is a fast loading and search engine friendly template. No images are used f
 <div id="footer">
 
 <div class="left">
-Copyright &copy; Year by <a href="#">Your Website</a>
+Copyright &copy; Year by <a href="#">Finn Leach</a>
 <!-- W3C Markup Validator -->
 <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
 
@@ -99,8 +100,6 @@ height="31" width="88" /></a>&nbsp;
 -->
 Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
-
-
 <div class="clear"> </div>
 
 </div>
