--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 This website has information about me, my classwork modules and artifacts. If you want you can check out my page to see what I am up to!
 </p>
 
-<img src="IMG_1250.JPG" alt="Pic 3" />
+<img src="IMG_1250.JPG" alt="Pic 3" width="200" height="100" />
 
 <div class="cleft">
-<img src="IMG_1474.JPG" alt="Pic 1" />
+<img src="IMG_1474.JPG" alt="Pic 1" width="400" height="200" />
 </div>
 
 <div class="cright">
-<img src="IMG_3455.JPG" alt="Pic 2" />
+<img src="IMG_3455.JPG" alt="Pic 2" width="400" height="200" />
 </div>
 
 <div class="clear"> </div>
