--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 <ul>
 <li><a href="#">Home</a></li>
-<li><a href="#">About</a></li>
+<li><a href="https://github.com/finnleachhh/About-Me">About</a></li>
 <li><a href="#">Coursework</a></li>
 <li><a href="#">Artifacts</a></li>
 <li><a href="#">Module Assignments</a></li>
