--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="https://github.com/finnleachhh/About-Me">About</a></li>
 <li><a href="#">Coursework</a></li>
 <li><a href="#">Artifacts</a></li>
-<li><a href="#">Module Assignments</a></li>
+<li><a href="https://finnleachhh.github.io/Module-Assignments/">Module Assignments</a></li>
 <li><a href="#">Contact Me</a></li>
 </ul>
 </div>
