--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li><a href="#">Home</a></li>
 <li><a href="https://finnleachhh.github.io/About-Me/">About</a></li>
 <li><a href="#">Coursework</a></li>
-<li><a href="#">Artifacts</a></li>
+<li><a href="https://finnleachhh.github.io/Artifact-Assignments/">Artifacts</a></li>
 <li><a href="https://finnleachhh.github.io/Module-Assignments/">Module Assignments</a></li>
 <li><a href="#">Contact Me</a></li>
 </ul>
